# stm32f3vc

./: README.md
embassy/helloworld/: Cargo.toml  flash_release.sh
embassy/helloworld2/: Cargo.toml  flash_release.sh
embassy/rust-stm32f3-embassy-helloworld/: Cargo.toml  flash_release.sh
embassy/rust-stm32f3-embassy-helloworld/src/: main.rs
embassy/rust-stm32f3-embassy-helloworld2/: Cargo.toml  flash_release.sh
embassy/rust-stm32f3-embassy-helloworld2/src/: main.rs
embassy/usb-hid/: Cargo.toml  README.md
embassy/usb-hid/src/: main.rs
embassy/usb-serial/: Cargo.toml  flash_release.sh
