[package]
name = "usb-serial"
version = "0.1.0"
edition = "2021"

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
embassy-stm32 = { version = "0.1.0", path = "./deps/embassy-stm32", features = [ "defmt", "stm32f303vc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.5.0", path = "./deps/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "./deps/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "./deps/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "./deps/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "./deps/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
static_cell = "2"
usbd-hid = "0.7.0"

[profile.release]
debug = 2

